23 March 2011: Wouter
	- udbzone, store and read zone data in the random-access udb format.

21 March 2011: Wouter
	- udbradtree works. udb-inspect tool can print radtree details.

16 March 2011: Matthijs
	- undo fix bug#325: messes up dname compression

14 March 2011: Wouter
	- udb code added.  uses lookup3 from unbound (public domain).
	- unit test for radix tree in cutest.
	- unit test for udb in cutest.
	- udb-inspect tool to printout internals of udb files.
	  for debug, not installed or built by default.
	- removed --disable-radixtree option.

11 March 2011: Wouter
	- Removed precompile features, speed gain took too much memory.
	- domain number to size_t.

9 March 2011: Wouter
	- DNAME synthesis of CNAME.  Uses TTL of the DNAME record.
	- nsec3 and wildcard code.  No additional section for wildcards.
	  Also CNAME and DNAME replies contain only that record (and synth
	  CNAME), the chain is not followed.

8 March 2011: Wouter
	- precompile work:
		class ANY gets AA flag, SOA and type-NS processing, just
		like BIND (9.6) and it simplifies processing for NSD.
	  other than compression difference (precompile compresses smaller),
	  there are no differences in a 49000 query testset against the root,
	  without EDNS.

7 March 2011: Wouter
	- check chown value and report high verbosity its error.

3 March 2011: Matthijs
	- fix #bug352: fix hardcoded paths in manpages.

2 March 2011: Matthijs
	- fix #bug354: make realclean cleans too much
	- added make devclean for cleaning up autoconf and automake stuff
	- Fix hardcoded paths in nsd.conf.sample and nsd.conf.5

24 February 2011: Matthijs
	- fix #bug350: refused notifies should log client ip.

2 March 2011: Wouter
	- Fix AXFR service with radix tree.
	- cutest for speed of answer encoding, and format of answers for root.

1 March 2011: Wouter
	- after merge, remove double -I. from makefile.
	- radixtree is default.  Nicer makefile and no warnings from unused
	  flex functions.

1 March 2011: Wouter